--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "license": "ISC",
   "author": "",
   "type": "commonjs",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "node-telegram-bot-api": "^0.66.0",
     "sqlite3": "^5.1.7",
-    "stocksocket": "^2.1.2"
+    "stocksocket": "^2.1.2",
+    "yahoo-finance2": "^2.13.3"
   }
 }
