--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "ISC",
   "author": "",
   "type": "commonjs",
-  "main": "src/bot.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/bot.js"
+    "start": "node src/main.js"
   },
   "dependencies": {
     "node-telegram-bot-api": "^0.66.0",
