--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "node test/db-test.js"
   },
   "dependencies": {
+    "better-sqlite3": "^11.9.1",
     "node-telegram-bot-api": "^0.66.0",
-    "sqlite3": "^5.1.7",
     "stocksocket": "^2.1.2"
   }
 }
