Some info to user

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "commonjs",
   "main": "src/main.js",
   "scripts": {
-    "start": "node src/main.js",
+    "start": "node src/bot.js",
     "test": "node test/db-test.js"
   },
   "dependencies": {
